--- a/bashmp-pt_BR.texi
+++ b/bashmp-pt_BR.texi
@@ -57,7 +57,25 @@ copy of the license is included in the section entitled ``GNU Free Documentation
 @end quotation
 @end copying
 
+@finalout
+
+@titlepage
+@title Página de Manual do shell GNU Bash
+@subtitle Documentação de Referência para o Bash
+@subtitle Edição @value{EDITION}, para @code{Bash} Versão @value{VERSION}.
+@subtitle @value{UPDATED-MONTH}
+@author Chet Ramey, Case Western Reserve University
+@author Brian Fox, Free Software Foundation
+
+@page
+@vskip 0pt plus 1filll
 @insertcopying
+
+@end titlepage
+
+@summarycontents
+@contents
+
 
    NAME
    SYNOPSIS
